adicionado uma div de testes

--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="./src/styles/styles.css" />
   </head>
   <body>
-
-      <div id="box1"></div>
-      <div id="position"></div>
-      <div id="box3"></div>
-
+<div></div>
     <script src="./src/scripts/script.js"></script>
   </body>
 </html>
